# Algorithm

./: .gitignore  README.md
CodeForce/: CMakeLists.txt  template.cpp
CodeForce/1504/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
CodeForce/1506/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
CodeForce/1512/: A.cpp  B.cpp  C.cpp  D.cpp
