cmake_minimum_required(VERSION 3.17)
project(CodeForce)

set(CMAKE_CXX_STANDARD 17)

add_executable(CodeForce
#        template.cpp
#        1506/1506A.cpp
#        1506/1506B.cpp
#        1506/1506C.cpp
#        1506/1506D.cpp
#        1506/1506E.cpp
#        1504/A.cpp
#        1504/B.cpp
#        1504/C.cpp
#        1504/D.cpp
#        1504/E.cpp
#        1512/A.cpp
#        1512/B.cpp
        1512/C.cpp
#        1512/D.cpp
        )